fix: use Java 8-compatible Set construction in GatewayAuthFilter